Fixed upvote/downvote/favorite button styling for StackOverflow Fixes https://github.com/liorgrossman/darkness/issues/115

--- a/chrome-extension/themes/websites/stackoverflow.scss
+++ b/chrome-extension/themes/websites/stackoverflow.scss
@@ -219,6 +219,15 @@ input {
 .vote-accepted-on {
 	@include invert-back();
 }
+// upvote / downvote / favorite next to a question
+.js-vote-up-btn, .js-vote-down-btn, .js-favorite-btn {
+	background-color: transparent !important;
+	border-color: transparent !important;
+	svg {
+		color: invert-back-color($theme-button-background) !important;
+	}
+}
+
 //switch context
 //----------------------------------------------------------------------------------------------------------------------------------------------------
 // Question switch context
